[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sombras/sombraGrande.png" type="Texture" id=1]
[ext_resource path="res://Enemigos/virus_final.png" type="Texture" id=2]
[ext_resource path="res://Enemigos/Virus.gd" type="Script" id=3]
[ext_resource path="res://Hitbox_hurtbox/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitbox_hurtbox/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitbox_hurtbox/SoftCollisionComponent.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemigos/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemigos/DeteccionJugador.tscn" type="PackedScene" id=8]
[ext_resource path="res://Estadisticas.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 58, 73 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 58, 0, 58, 73 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 116, 0, 58, 73 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 174, 0, 58, 73 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Flotar",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 23.2313

[sub_resource type="CircleShape2D" id=7]
radius = 19.214

[sub_resource type="CircleShape2D" id=8]
radius = 118.97

[sub_resource type="CircleShape2D" id=9]
radius = 5.56439

[sub_resource type="CircleShape2D" id=10]
radius = 5.82557

[node name="VirusFinal" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )
MAX_SPEED = 100

[node name="Sombra" type="Sprite" parent="."]
position = Vector2( 2.89301, 28.2149 )
scale = Vector2( 1.62066, 1.4993 )
texture = ExtResource( 1 )

[node name="VirusAnimado" type="AnimatedSprite" parent="."]
position = Vector2( 5.77001, 10.9815 )
frames = SubResource( 5 )
animation = "Flotar"
frame = 1
playing = true
offset = Vector2( 0, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.51218, 0 )
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
position = Vector2( -0.263519, 0.527039 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.277359, 0.0211182 )
shape = SubResource( 7 )

[node name="Estadisticas" parent="." instance=ExtResource( 9 )]
max_health = 6

[node name="DeteccionJugador" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="DeteccionJugador" index="0"]
self_modulate = Color( 0.92549, 0, 0.172549, 0.529412 )
position = Vector2( 2.89963, -1.21537 )
shape = SubResource( 8 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
scale = Vector2( 5, 5 )
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
self_modulate = Color( 0.603922, 0.160784, 0.0745098, 0.670588 )
position = Vector2( -0.0371532, -0.233143 )
shape = SubResource( 9 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]
scale = Vector2( 5, 5 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0.622738, -0.0728016 )
shape = SubResource( 10 )

[node name="WanderController" parent="." instance=ExtResource( 7 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Estadisticas" to="." method="_on_Estadisticas_no_health"]

[editable path="Hurtbox"]

[editable path="DeteccionJugador"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
